[gd_scene load_steps=20 format=3 uid="uid://6tusihkhmm8e"]

[ext_resource type="Script" path="res://miscellenaous/hud.gd" id="1_32714"]
[ext_resource type="Texture2D" uid="uid://cd5487f1lkfly" path="res://assets/sprites/miscelleaneous/e_tank_spritesheet_kk.png" id="2_jftja"]
[ext_resource type="Texture2D" uid="uid://ceiqj8bjouqre" path="res://assets/sprites/miscelleaneous/pause_screen_setup3.png" id="2_jxh0c"]
[ext_resource type="Texture2D" uid="uid://ckiorwijfvv0x" path="res://assets/sprites/miscelleaneous/w_tank_spritesheet_kk.png" id="3_yjobx"]
[ext_resource type="FontFile" uid="uid://b2b4sqcxdam75" path="res://assets/fonts/megaman_2.ttf" id="5_g1yve"]
[ext_resource type="AudioStream" uid="uid://buhh2i3t245jp" path="res://assets/sounds/pause_menu_MM1.ogg" id="5_vp1wl"]
[ext_resource type="AudioStream" uid="uid://cf46d7ylroa2c" path="res://assets/sounds/weapon_and_menu_select.ogg" id="6_ja50w"]
[ext_resource type="AudioStream" uid="uid://cuhrcqnd47np0" path="res://assets/sounds/health_up.wav" id="8_80bcg"]
[ext_resource type="Shader" path="res://players/megaman.gdshader" id="9_1ufh6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g37a2"]
atlas = ExtResource("2_jftja")
region = Rect2(0, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7wdu"]
atlas = ExtResource("2_jftja")
region = Rect2(32, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j6gx"]
atlas = ExtResource("2_jftja")
region = Rect2(0, 38, 32, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_g8a33"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g37a2")
}],
"loop": true,
"name": &"not_selected",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7wdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j6gx")
}],
"loop": true,
"name": &"selected",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_cjj81"]
atlas = ExtResource("3_yjobx")
region = Rect2(0, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4x1p"]
atlas = ExtResource("3_yjobx")
region = Rect2(32, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_4iyfp"]
atlas = ExtResource("3_yjobx")
region = Rect2(0, 38, 32, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_twexw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjj81")
}],
"loop": true,
"name": &"not_selected",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4x1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4iyfp")
}],
"loop": true,
"name": &"selected",
"speed": 5.0
}]

[sub_resource type="Theme" id="Theme_q5jc1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_be7r0"]
shader = ExtResource("9_1ufh6")
shader_parameter/originalbodycolor = null
shader_parameter/originalbodycolorii = null
shader_parameter/originaloutlinecolor = Color(0.545098, 0.545098, 0.545098, 1)
shader_parameter/bodycolori = null
shader_parameter/bodycolorii = null
shader_parameter/outlinecolor = Color(0, 0, 0.996078, 1)

[node name="HUD" type="CanvasLayer"]
process_mode = 3
process_priority = 1
process_physics_priority = 1
script = ExtResource("1_32714")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 1, 1)
offset_left = 24.0
offset_right = 36.0
offset_bottom = 120.0
theme_override_fonts/font = ExtResource("5_g1yve")
max_value = 20.0
value = 20.0
fill_mode = 3

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
z_index = 1
offset_right = 700.0
offset_bottom = 699.0
color = Color(0, 0, 0, 1)

[node name="pause_screen_setup" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_jxh0c")
centered = false

[node name="e_tank" type="AnimatedSprite2D" parent="pause_screen_setup"]
position = Vector2(299, 533)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_g8a33")
animation = &"selected"
frame = 1
frame_progress = 0.77691

[node name="w_tank" type="AnimatedSprite2D" parent="pause_screen_setup"]
position = Vector2(517, 533)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_twexw")
animation = &"selected"
frame_progress = 0.557678

[node name="e_tank_left" type="Label" parent="pause_screen_setup"]
offset_left = 406.0
offset_top = 501.0
offset_right = 485.0
offset_bottom = 597.0
theme = SubResource("Theme_q5jc1")
theme_override_fonts/font = ExtResource("5_g1yve")
theme_override_font_sizes/font_size = 68
text = "9"

[node name="text" type="Label" parent="pause_screen_setup/e_tank_left"]
layout_mode = 0
offset_left = -59.0
offset_right = 1.0
offset_bottom = 96.0
theme_override_fonts/font = ExtResource("5_g1yve")
theme_override_font_sizes/font_size = 68
text = "X"

[node name="w_tank_left" type="Label" parent="pause_screen_setup"]
offset_left = 626.0
offset_top = 501.0
offset_right = 705.0
offset_bottom = 597.0
theme_override_fonts/font = ExtResource("5_g1yve")
theme_override_font_sizes/font_size = 68
text = "x"

[node name="text" type="Label" parent="pause_screen_setup/w_tank_left"]
layout_mode = 0
offset_left = -58.0
offset_right = 2.0
offset_bottom = 96.0
theme_override_fonts/font = ExtResource("5_g1yve")
theme_override_font_sizes/font_size = 68
text = "X"

[node name="ProgressBar" type="ProgressBar" parent="pause_screen_setup"]
offset_left = 110.0
offset_top = 637.0
offset_right = 587.0
offset_bottom = 664.0
theme_override_fonts/font = ExtResource("5_g1yve")
value = 25.0

[node name="pause_menu_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_vp1wl")
max_distance = 1e+16

[node name="switch_menu_option_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ja50w")
max_distance = 1e+15

[node name="increase_health" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_80bcg")

[node name="weapon_energy" type="ProgressBar" parent="."]
modulate = Color(1, 0.0156863, 0.109804, 1)
material = SubResource("ShaderMaterial_be7r0")
offset_left = 51.0
offset_top = 1.0
offset_right = 198.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource("5_g1yve")
max_value = 30.0
value = 30.0

[node name="map" type="ColorRect" parent="."]
offset_left = 474.0
offset_top = 4.0
offset_right = 674.0
offset_bottom = 104.0

[node name="player" type="ColorRect" parent="map"]
layout_mode = 0
offset_left = 12.0
offset_top = 11.0
offset_right = 25.0
offset_bottom = 26.0
color = Color(1, 0.054902, 0, 1)

[connection signal="value_changed" from="pause_screen_setup/ProgressBar" to="." method="_on_progress_bar_value_changed"]
